function nghiem thu

--- a/App.config
+++ b/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Vietinak_Kho.Properties.Settings.QuanLyKhoConnectionString"
+            connectionString="Data Source=ISO-01\SANG;Initial Catalog=QuanLyKho;User ID=sa;Password=123;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
     </startup>
