--- a/Vietinak_Kho.csproj
+++ b/Vietinak_Kho.csproj
@@ -49,13 +49,17 @@
   <ItemGroup>
     <Compile Include="DAO\BophanDAO.cs" />
     <Compile Include="DAO\ChucvuDAO.cs" />
+    <Compile Include="DAO\DanhsachnguyenvatlieuDAO.cs" />
     <Compile Include="DAO\DataProvider.cs" />
+    <Compile Include="DAO\LichsunghiemthuDAO.cs" />
     <Compile Include="DAO\LichsunhapxuatDAO.cs" />
     <Compile Include="DAO\ThongtinvattuDAO.cs" />
     <Compile Include="DAO\UserDAO.cs" />
     <Compile Include="DAO\UserlogsDAO.cs" />
     <Compile Include="DTO\Bophan.cs" />
     <Compile Include="DTO\Chucvu.cs" />
+    <Compile Include="DTO\Danhsachnguyenvatlieu.cs" />
+    <Compile Include="DTO\Lichsunghiemthu.cs" />
     <Compile Include="DTO\Lichsunhapxuat.cs" />
     <Compile Include="DTO\Thongtinvattu.cs" />
     <Compile Include="DTO\User.cs" />
@@ -108,6 +112,12 @@
     <Compile Include="f_Caidat\FormXoachucvu.Designer.cs">
       <DependentUpon>FormXoachucvu.cs</DependentUpon>
     </Compile>
+    <Compile Include="f_Caidat\Thongtinnguyenvatlieu\PPC\FormDanhsachnguyenvatlieu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_Caidat\Thongtinnguyenvatlieu\PPC\FormDanhsachnguyenvatlieu.Designer.cs">
+      <DependentUpon>FormDanhsachnguyenvatlieu.cs</DependentUpon>
+    </Compile>
     <Compile Include="f_Caidat\Thongtinnguyenvatlieu\FormSuanguyenvatlieu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -132,11 +142,47 @@
     <Compile Include="f_Caidat\Thongtinnguyenvatlieu\FormXoanguyenvatlieu.Designer.cs">
       <DependentUpon>FormXoanguyenvatlieu.cs</DependentUpon>
     </Compile>
+    <Compile Include="f_Caidat\Thongtinnguyenvatlieu\PPC\FormSuaNVL.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_Caidat\Thongtinnguyenvatlieu\PPC\FormSuaNVL.Designer.cs">
+      <DependentUpon>FormSuaNVL.cs</DependentUpon>
+    </Compile>
+    <Compile Include="f_Caidat\Thongtinnguyenvatlieu\PPC\FormThemNVL.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_Caidat\Thongtinnguyenvatlieu\PPC\FormThemNVL.Designer.cs">
+      <DependentUpon>FormThemNVL.cs</DependentUpon>
+    </Compile>
+    <Compile Include="f_Caidat\Thongtinnguyenvatlieu\PPC\FormThemNVLbangexcel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_Caidat\Thongtinnguyenvatlieu\PPC\FormThemNVLbangexcel.Designer.cs">
+      <DependentUpon>FormThemNVLbangexcel.cs</DependentUpon>
+    </Compile>
     <Compile Include="f_Danhsach\FormDanhsach.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="f_Danhsach\FormDanhsach.Designer.cs">
       <DependentUpon>FormDanhsach.cs</DependentUpon>
+    </Compile>
+    <Compile Include="f_Nghiemthu\FormDanhsachchonghiemthu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_Nghiemthu\FormDanhsachchonghiemthu.Designer.cs">
+      <DependentUpon>FormDanhsachchonghiemthu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="f_Nghiemthu\FormNghiemthu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_Nghiemthu\FormNghiemthu.Designer.cs">
+      <DependentUpon>FormNghiemthu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="f_Nghiemthu\FormTienhanhnghiemthu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_Nghiemthu\FormTienhanhnghiemthu.Designer.cs">
+      <DependentUpon>FormTienhanhnghiemthu.cs</DependentUpon>
     </Compile>
     <Compile Include="f_Nhapxuat\FormXuatkho.cs">
       <SubType>Form</SubType>
@@ -248,6 +294,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuanLyKhoDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QuanLyKhoDataSet.xsd</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="f_Caidat\FormBophanvachucvu.resx">
       <DependentUpon>FormBophanvachucvu.cs</DependentUpon>
     </EmbeddedResource>
@@ -272,6 +323,9 @@
     <EmbeddedResource Include="f_Caidat\FormXoachucvu.resx">
       <DependentUpon>FormXoachucvu.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="f_Caidat\Thongtinnguyenvatlieu\PPC\FormDanhsachnguyenvatlieu.resx">
+      <DependentUpon>FormDanhsachnguyenvatlieu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="f_Caidat\Thongtinnguyenvatlieu\FormSuanguyenvatlieu.resx">
       <DependentUpon>FormSuanguyenvatlieu.cs</DependentUpon>
     </EmbeddedResource>
@@ -284,8 +338,26 @@
     <EmbeddedResource Include="f_Caidat\Thongtinnguyenvatlieu\FormXoanguyenvatlieu.resx">
       <DependentUpon>FormXoanguyenvatlieu.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="f_Caidat\Thongtinnguyenvatlieu\PPC\FormSuaNVL.resx">
+      <DependentUpon>FormSuaNVL.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="f_Caidat\Thongtinnguyenvatlieu\PPC\FormThemNVL.resx">
+      <DependentUpon>FormThemNVL.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="f_Caidat\Thongtinnguyenvatlieu\PPC\FormThemNVLbangexcel.resx">
+      <DependentUpon>FormThemNVLbangexcel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="f_Danhsach\FormDanhsach.resx">
       <DependentUpon>FormDanhsach.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="f_Nghiemthu\FormDanhsachchonghiemthu.resx">
+      <DependentUpon>FormDanhsachchonghiemthu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="f_Nghiemthu\FormNghiemthu.resx">
+      <DependentUpon>FormNghiemthu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="f_Nghiemthu\FormTienhanhnghiemthu.resx">
+      <DependentUpon>FormTienhanhnghiemthu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="f_Nhapxuat\FormXuatkho.resx">
       <DependentUpon>FormXuatkho.cs</DependentUpon>
@@ -359,10 +431,49 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="QuanLyKhoDataSet.xsc">
+      <DependentUpon>QuanLyKhoDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="QuanLyKhoDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>QuanLyKhoDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="QuanLyKhoDataSet.xss">
+      <DependentUpon>QuanLyKhoDataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <COMReference Include="Microsoft.Office.Core">
+      <Guid>{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>8</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="Microsoft.Office.Interop.Excel">
+      <Guid>{00020813-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>9</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="VBIDE">
+      <Guid>{0002E157-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>5</VersionMajor>
+      <VersionMinor>3</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
