--- a/Vietinak_Kho.csproj
+++ b/Vietinak_Kho.csproj
@@ -53,6 +53,7 @@
     <Compile Include="DAO\DataProvider.cs" />
     <Compile Include="DAO\LichsunhapchitietDAO.cs" />
     <Compile Include="DAO\LichsunhapxuatDAO.cs" />
+    <Compile Include="DAO\LichsuxuatchitietDAO.cs" />
     <Compile Include="DAO\ThongtinvattuDAO.cs" />
     <Compile Include="DAO\UserDAO.cs" />
     <Compile Include="DAO\UserlogsDAO.cs" />
@@ -61,6 +62,7 @@
     <Compile Include="DTO\Danhsachnguyenvatlieu.cs" />
     <Compile Include="DTO\Lichsunhapchitiet.cs" />
     <Compile Include="DTO\Lichsunhapxuat.cs" />
+    <Compile Include="DTO\Lichsuxuatchitiet.cs" />
     <Compile Include="DTO\Thongtinvattu.cs" />
     <Compile Include="DTO\User.cs" />
     <Compile Include="DTO\Userlogs.cs" />
@@ -207,6 +209,12 @@
     </Compile>
     <Compile Include="f_Qccheck\FormTienhanhqccheck.Designer.cs">
       <DependentUpon>FormTienhanhqccheck.cs</DependentUpon>
+    </Compile>
+    <Compile Include="f_Thongke\FormChitietvattu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_Thongke\FormChitietvattu.Designer.cs">
+      <DependentUpon>FormChitietvattu.cs</DependentUpon>
     </Compile>
     <Compile Include="f_Thongke\FormDanhsachvattu.cs">
       <SubType>Form</SubType>
@@ -394,6 +402,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="f_Qccheck\FormTienhanhqccheck.resx">
       <DependentUpon>FormTienhanhqccheck.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="f_Thongke\FormChitietvattu.resx">
+      <DependentUpon>FormChitietvattu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="f_Thongke\FormDanhsachvattu.resx">
       <DependentUpon>FormDanhsachvattu.cs</DependentUpon>
