--- a/Vietinak_Kho.csproj
+++ b/Vietinak_Kho.csproj
@@ -260,6 +260,12 @@
     <Compile Include="f_Thongke\FormLichsuxuat.Designer.cs">
       <DependentUpon>FormLichsuxuat.cs</DependentUpon>
     </Compile>
+    <Compile Include="f_Thongke\FormLichsuxuatchitiet.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_Thongke\FormLichsuxuatchitiet.Designer.cs">
+      <DependentUpon>FormLichsuxuatchitiet.cs</DependentUpon>
+    </Compile>
     <Compile Include="f_Thongke\FormThongke.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -458,6 +464,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="f_Thongke\FormLichsuxuat.resx">
       <DependentUpon>FormLichsuxuat.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="f_Thongke\FormLichsuxuatchitiet.resx">
+      <DependentUpon>FormLichsuxuatchitiet.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="f_Thongke\FormThongke.resx">
       <DependentUpon>FormThongke.cs</DependentUpon>
