--- a/App.config
+++ b/App.config
@@ -10,4 +10,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
     </startup>
+	<appSettings>
+		<!--The license context used-->
+		<add key="EPPlus:ExcelPackage.LicenseContext" value="NonCommercial" />
+	</appSettings>
 </configuration>
