--- a/Vietinak_Kho.csproj
+++ b/Vietinak_Kho.csproj
@@ -261,6 +261,12 @@
     <Compile Include="f_PPC\FormPPC.Designer.cs">
       <DependentUpon>FormPPC.cs</DependentUpon>
     </Compile>
+    <Compile Include="f_PPC\FormSuaPO.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_PPC\FormSuaPO.Designer.cs">
+      <DependentUpon>FormSuaPO.cs</DependentUpon>
+    </Compile>
     <Compile Include="f_PPC\FormTaoPo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -569,6 +575,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="f_PPC\FormPPC.resx">
       <DependentUpon>FormPPC.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="f_PPC\FormSuaPO.resx">
+      <DependentUpon>FormSuaPO.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="f_PPC\FormTaoPo.resx">
       <DependentUpon>FormTaoPo.cs</DependentUpon>
